Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95373

Component is missing required property index from here

    XMLWordPrintable

Details

    • 3dccc843363b26f6e51c9a78be347dd905904e25 (qt/qtdeclarative/dev) bbc8f3ef5ac763cada9b72c53b605e043c771a4c (qt/qtdeclarative/6.2)

    Description

      For code bellow (that works just fine with "qml" / "qmlscene" tool),
      qmllint (dev branch, revision 09759c6922c8d3f0d0d920d1fdd83ecf19f18947)
      reports problem:

      Warning: /var/tmp/test.qml:6:9: Component is missing required property index from here
              Text {
              ^^^^
      
      
      import QtQuick 2.0
      
      Row {
          Repeater {
              model: 3
              Text {
                  required property int index
                  height: 40
                  color: "black"
                  text: "I'm item " + index 
              }
          }
      }
      

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-95373
          # Subject Branch Project Status CR V

          Activity

            People

              fabiankosmale Fabian Kosmale
              evgeniy_dushistov evgeniy_dushistov
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes