Keep track of implicit and explicit Component

This allows us to ignore them when we e.g. check for required
properties.

Fixes: QTBUG-95373
Change-Id: I2b02e3c24b4891773ac6619a9e051edd9d87aa1f
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>